Create PUT /taxonomy endpoint that accesses uploaded files
